Implement equation as a new virtual project device to allow user to write comparison equation with custom number expression on both size of the equation